# BackendTemplate

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: af713c35a619_removed_provider_field_from_user_.py  b27fc138362a_initial_migration.py
core/: config.py
src/Exceptions/: auth_exceptions.py  core_exceptions.py  user_exceptions.py
src/UserManagement/: api.py  models.py  schemas.py
src/UserManagement/routers/: __init__.py  admin_router.py  auth_router.py  user_router.py
src/UserManagement/services/: admin_service.py  auth_service.py  user_service.py
src/core/: config.py  database.py  init_db.py  middlewares.py  utils.py
src/core/security/: auth.py  dependencies.py  permissions.py
src/exceptions/: user_exceptions.py
